# naplast

./: README.md
na=app/: App.jsx  ErrorBoundary.jsx  clients.xlsx  improved_quote_generator_pricelist_v16.html  index.css  index.html  main.jsx  main.rs  package-lock.json  package.json  products + prices.txt  products+prices.xlsx  tailwind.config.js  vite.config.js
na=app/src/: App.jsx  initialClientsDB.js
na=app/src-tauri/: Cargo.toml  tauri.conf.json
na=app/src/analytics/: salesAnalytics.js
na=app/src/data/: clients.json  products.json
na=app/src/modules/pricelist/: PriceListEditor.jsx  PriceListPreview.jsx  PriceListSidebar.jsx  PriceListView.jsx
na=app/src/views/: AIInsightsView.jsx  ClientsView.jsx  DashboardView.jsx  OCRView.jsx  ProductsView.jsx  ReportsView.jsx  SalesRevenueView.jsx
